main pages done

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -27,6 +27,9 @@
 .yellow {
    background-color: var(--bgYellow); 
 }
+.skyblue {
+    background-color: var(--bgSkyblue) ;
+}
 @media(max-width: 700px) {
     .buttonContainer {
         width: 100%;
