--- a/src/Pages/Home/Brand/BrandCard.css
+++ b/src/Pages/Home/Brand/BrandCard.css
@@ -50,6 +50,10 @@
     .brand_card_section .col-md-4:nth-child(3) {
         padding: 30px 0px 30px 0px !important;
     }
+    .brand_card_section .card  {
+        height: 360px;
+        padding: 15px 10px !important;
+    }
 }
 @media(min-width: 768px) and (max-width: 1000px) {
     .brand_card_section .card {
