--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -35,6 +35,9 @@
         width: 100%;
         align-items: center;
     }
+    .buttonContainer .secodaryButtonDiv  {
+        padding: 0 !important
+    }
 }
 @media(min-width: 768px) and (max-width: 1000px) {
     .buttonContainer {
