--- a/src/Pages/Terms/Terms.css
+++ b/src/Pages/Terms/Terms.css
@@ -7,6 +7,7 @@
 }
 .terms .buttonDiv p {
     padding: 0;
+    text-align: center;
 }
 .terms p {
     padding: 15px 0;
@@ -14,4 +15,7 @@
 .terms ul {
     list-style-type: disc;
     padding-inline-start: 20px;;
+}
+.terms_section .footer-section {
+    text-align: center;
 }
