--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -69,6 +69,9 @@
         padding: var(--mobile_icon_div) 0 var(--mobile_icon_div) 0;
         height: 200px;
     }
+    .nav-link {
+        text-align: center;
+    }
 }
 @media(min-width: 701px) and (max-width: 1000px) {
     .header {
