--- a/src/assets/constant.css
+++ b/src/assets/constant.css
@@ -210,3 +210,8 @@ p,h1,h2,h3,h4,h5,h6 {
         padding: 0 5px!important
     }
 }
+@media (min-width: 992px) {
+    .container, .container-lg, .container-md, .container-sm {
+        max-width: 1140px;
+    }
+}
