--- a/src/Components/Input/Input.css
+++ b/src/Components/Input/Input.css
@@ -17,7 +17,7 @@
     border: var(--button-border);
     padding: 0 15px;
     background-color: #fff;
-    color: var(--main-color)
+    color: var(--main-color);
 }
 .error {
     font-size: 10px;
@@ -25,4 +25,10 @@
     line-height: 15px;
     padding: 5px  0 0 0;
     text-align: left;
+}
+
+@media(max-width: 1200px) {
+    .input {
+        border: var(--button-border) !important;
+    }
 }
