--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -10,6 +10,9 @@
 .navbarWhiteDiv {
     background-color: #fff;
     height: 90px;
+    -webkit-box-shadow: 0px 1px 1px 2px rgba(237,237,237,1);
+    -moz-box-shadow: 0px 1px 1px 2px rgba(237,237,237,1);
+    box-shadow: 0px 1px 1px 2px rgba(237,237,237,1);
 }
 .nav-link {
     font-size: var(----menu-element-font);
@@ -70,6 +73,9 @@
         width: 100vw;
         height: 220px;
         background-color: #fff;
+        -webkit-box-shadow: 0px 1px 1px 2px rgba(237,237,237,1);
+        -moz-box-shadow: 0px 1px 1px 2px rgba(237,237,237,1);
+        box-shadow: 0px 1px 1px 2px rgba(237,237,237,1);
     }
     .navbar-collapse .navbar-nav {
         display: flex;
@@ -87,6 +93,12 @@
     }
     .nav-link {
         text-align: center;
+    }
+    .navbar-toggler {
+        border: 1px solid transparent !important;
+    }
+    .navbar-toggler:focus {
+        box-shadow: none !important;
     }
 }
 @media(min-width: 701px) and (max-width: 1000px) {
