--- a/src/Pages/Home/FourFunnel/FourFunnel.css
+++ b/src/Pages/Home/FourFunnel/FourFunnel.css
@@ -46,6 +46,69 @@ li p {
     text-align: left;
     padding: 10px 0;
 }
+/* .funnel_ul li span.animating { */
+    /* transform: scale(1);
+    transition: transform 1s; 
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    overflow: hidden;
+  position: relative;
+  width: 1em;
+  height: 1em;
+  background:black; 
+    /* font-size: 22px;
+}
+/* .funnel_ul li span.animating:before {
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    border-radius: 50%;
+    /* background: black; */
+    /* box-shadow: inset 0 0 0 1px orange;
+    content: '';
+  }  */
+  /* .funnel_ul li span em {
+    position: absolute;
+    margin: 0 -50%;
+    width: 200%;
+    height: inherit;
+    transform-origin: 50% 0;
+    background: #fff;
+    animation: revealCircle 5s linear infinite forwards;
+  }
+  @keyframes revealCircle {
+    to {
+      transform: rotate(180deg);
+    }
+  } */
+ 
+.funnel_ul li:hover span {
+    position: relative;
+    /* transform: scale(1.2); */
+    /* transition: transform 2s ease-in-out, font-size 2s ease-in-out; */
+    /* animation: growAndTilt 2s forwards; */
+    /* transform: scale(1.2); */
+    /* transition: all 1s; */
+    /* font-size: 22px; */
+    /* color: var(--orange-color); */
+   
+    /* border-bottom: 3px solid var(--orange-color); */
+    /* padding: 0 0 0px 0; */
+    /* background-color: var(--main-color); */
+    /* color: #fff; */
+    /* border-radius: 50%; */
+    /* padding: 2px; */
+    /* padding: 3px 0; */
+}
+
+.animating em {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform : translate(-50%, -50%);
+    font-style: normal;
+}
 @media(min-width: 1600px) {
     li p {
         font-size: 18px;;
