--- a/src/Pages/Explore/ExploreCard/ExploreCard.css
+++ b/src/Pages/Explore/ExploreCard/ExploreCard.css
@@ -7,7 +7,7 @@
     border-radius:25px;
     transition: all 0.3s;
     padding-bottom: 20px;
-    height: 650px;
+    height: 600px;
     width: 95%;
     margin:20px 0;
 }
@@ -22,6 +22,12 @@
 .explore_card .image_container .bg_image {
     width: 100%;
     height: 250px;
+    object-fit: cover;
+    border-radius: 15px;
+}
+.explore_card .image_container .dummy {
+    width: 100%;
+    height: 220px;
     object-fit: cover;
     border-radius: 15px;
 }
@@ -54,6 +60,7 @@
     padding-bottom: 15px;
     color: var(--main-color);
     padding: 10px 0;
+    height: 160px;
 }
 .explore_card .secodaryButtonDiv {
     padding: 10px 0;
