--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -30,7 +30,7 @@
     color: var(--main-color);
 }
 .social_links a svg {
-    font-size: 20px;;
+    font-size: 20px;
 }
 .social_links a:hover {
     transform: translateY(-7px);
