--- a/src/Components/Input/TextArea/Textarea.css
+++ b/src/Components/Input/TextArea/Textarea.css
@@ -13,10 +13,12 @@
   
   .textarea {
     width: 100%;
-    padding: 0.5rem;
+    padding: 15px 15px 0 15px;
     border: 2px solid var(--main-color);
     border-radius: 4px;
     resize: vertical;
+    font-family: "Roboto", sans-serif;
+
   }
   
   /* .textarea.error {
