--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -46,6 +46,13 @@
     padding: 15px 20px !important;
     width: 150px !important;
 }
+a.track {
+    color: var(--main-color);
+    text-decoration: none;
+    font-weight: 700;
+    width: 150px;
+    
+}
 
 @media (max-width: 700px) {
     .removeHeight{
@@ -71,7 +78,7 @@
         top: 118px;
         left: 0;
         width: 100vw;
-        height: 220px;
+        height: 280px;
         background-color: #fff;
         -webkit-box-shadow: 0px 1px 1px 2px rgba(237,237,237,1);
         -moz-box-shadow: 0px 1px 1px 2px rgba(237,237,237,1);
@@ -99,6 +106,9 @@
     }
     .navbar-toggler:focus {
         box-shadow: none !important;
+    }
+    a.track {
+        padding: 10px 0 30px 0;
     }
 }
 @media(min-width: 701px) and (max-width: 1000px) {
