--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -77,9 +77,12 @@
    color: var(--main-color);
     
 }
-.footer_links li:nth-child(4) a{
+.footer_links li:nth-child(5) a{
   font-weight: var(--fw-700);
     
+}
+.agreement_links li:nth-child(4) a{
+    font-weight: var(--fw-400);
 }
 .footer_second_div .col-sm-12{
     border-top: var(--line-border);
