--- a/src/Pages/ExploreBrand/ExploreBrand.css
+++ b/src/Pages/ExploreBrand/ExploreBrand.css
@@ -69,6 +69,7 @@
     border-radius: 5px;
     padding: 3% 5%;
     text-transform: uppercase;
+    text-decoration: none;
     font-size: 16px;
     line-height: 22px;
     font-family: "Roboto", sans-serif;
